--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,5 +65,6 @@ markdown_extensions:
   - attr_list
   - md_in_html
   - pymdownx.superfences
+  - admonition
   - pymdownx.tabbed:
       alternate_style: true 
